--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Python general stuff
+__pycache__/
+
 # pyvenv related files and directories.
 .cfg
 bin/
@@ -7,3 +10,6 @@ venv/
 
 # VS Code configuration file.
 .vscode/
+
+notes.md
+.DS_Store
